--- a/Jupyter Notebook Tutorials/Displaying Pandas DataFrames Horizontally in Jupyter Notebooks.ipynb
+++ b/Jupyter Notebook Tutorials/Displaying Pandas DataFrames Horizontally in Jupyter Notebooks.ipynb
@@ -22,13 +22,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "nrows = 8\n",
-    "bikes = pd.read_csv('../../data/bikes.csv', nrows=nrows, \n",
-    "                    usecols=['tripduration', 'temperature'])\n",
-    "flights = pd.read_csv('../../data/flights.csv', nrows=nrows, \n",
-    "                     usecols=['airline', 'origin', 'dest'])\n",
-    "housing = pd.read_csv('../../data/housing.csv', nrows=nrows, \n",
-    "                      usecols=['YrSold', 'SalePrice'])"
+    "bikes = pd.read_csv(\n",
+    "    \"../data/bikes.csv\", nrows=nrows, usecols=[\"tripduration\", \"temperature\"]\n",
+    ")\n",
+    "flights = pd.read_csv(\n",
+    "    \"../data/flights.csv\", nrows=nrows, usecols=[\"airline\", \"origin\", \"dest\"]\n",
+    ")\n",
+    "housing = pd.read_csv(\n",
+    "    \"../data/housing.csv\", nrows=nrows, usecols=[\"YrSold\", \"SalePrice\"]\n",
+    ")"
    ]
   },
   {
@@ -336,7 +340,7 @@
     }
    ],
    "source": [
-    "print(bikes._repr_html_())"
+    "print(bikes._repr_html_())  # type: ignore"
    ]
   },
   {
@@ -760,12 +764,13 @@
    "source": [
     "from IPython.display import display_html\n",
     "\n",
-    "def display_dfs(dfs, gap=50, justify='center'):\n",
+    "\n",
+    "def display_dfs(dfs, gap=50, justify=\"center\"):\n",
     "    html = \"\"\n",
     "    for title, df in dfs.items():\n",
-    "        cur_html = f'<div> <h3>{title}</h3> {df._repr_html_()}</div>'\n",
-    "        html +=  cur_html\n",
-    "    html= f\"\"\"\n",
+    "        cur_html = f\"<div> <h3>{title}</h3> {df._repr_html_()}</div>\"\n",
+    "        html += cur_html\n",
+    "    html = f\"\"\"\n",
     "    <div style=\"display:flex; gap:{gap}px; justify-content:{justify};\">\n",
     "        {html}\n",
     "    </div>\n",
@@ -1006,8 +1011,8 @@
     }
    ],
    "source": [
-    "dfs = {'Bikes': bikes, 'Flights': flights, 'Housing': housing}\n",
-    "display_dfs(dfs, justify='flex-start')"
+    "dfs = {\"Bikes\": bikes, \"Flights\": flights, \"Housing\": housing}\n",
+    "display_dfs(dfs, justify=\"flex-start\")"
    ]
   },
   {
@@ -1036,9 +1041,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "WinPy3.12sys",
    "language": "python",
-   "name": "python3"
+   "name": "win_pyenv3.12"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1050,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
